minor clean up, no functionality added

--- a/code/src/test.ipynb
+++ b/code/src/test.ipynb
@@ -287,6 +287,81 @@
     "print(df_stats_rows.first())\n",
     "print(df_stats_rows.show(5, truncate=False))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### learning how .get() works for python dictionaries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_dict = {\n",
+    "    \"label\": {'history': 1},\n",
+    "    \"_c1\": 0.5,\n",
+    "    \"_c2\": 0.6,\n",
+    "    \"_c3\": 0.7,\n",
+    "    \"_c4\": 0.8,\n",
+    "    \"_c5\": 0.9,\n",
+    "    \"_c6\": 1.0,\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'your mum gay'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "key_whose_value_you_want_to_extract = \"lol\"\n",
+    "value_returned_if_key_does_not_exist = 'your mum gay'\n",
+    "\n",
+    "random_dict.get(key_whose_value_you_want_to_extract, value_returned_if_key_does_not_exist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (3646006473.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[12], line 4\u001b[1;36m\u001b[0m\n\u001b[1;33m    **random_dict.get(key_whose_value_you_want_to_extract, value_returned_if_key_does_not_exist)\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "key_whose_value_you_want_to_extract = \"label\"\n",
+    "value_returned_if_key_does_not_exist = 'your mum gay'\n",
+    "\n",
+    "**random_dict.get(key_whose_value_you_want_to_extract, value_returned_if_key_does_not_exist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
