--- a/code/src/rdd_testing_stuff.ipynb
+++ b/code/src/rdd_testing_stuff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 98,
    "id": "9063d00c",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 99,
    "id": "84413ae3",
    "metadata": {},
    "outputs": [],
@@ -53,89 +53,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "10a5f60d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = [\n",
-    "    {\"ID\": 1, \"Name\": \"Alice\", \"Age\": 25, \"Capacity\": 50},\n",
-    "    {\"ID\": 2, \"Name\": \"Bob\", \"Age\": 30, \"Capacity\": 30},\n",
-    "    {\"ID\": 3, \"Name\": \"Charlie\", \"Age\": 35, \"Capacity\": 70},\n",
-    "    {\"ID\": 4, \"Name\": \"David\", \"Age\": 40, \"Capacity\": 20},\n",
-    "    {\"ID\": 5, \"Name\": \"Eve\", \"Age\": 45, \"Capacity\": 40}\n",
-    "]\n",
-    "\n",
-    "rdd = sc.parallelize(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "f25f25c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'ID': 1, 'Name': 'Alice', 'Age': 25, 'Capacity': 50}, {'ID': 2, 'Name': 'Bob', 'Age': 30, 'Capacity': 30}, {'ID': 3, 'Name': 'Charlie', 'Age': 35, 'Capacity': 70}, {'ID': 4, 'Name': 'David', 'Age': 40, 'Capacity': 20}, {'ID': 5, 'Name': 'Eve', 'Age': 45, 'Capacity': 40}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(rdd.collect())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "180b16a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'ID': 1, 'Name': 'Alice', 'Age': 25, 'Capacity': 50, 'Score': 100}, {'ID': 2, 'Name': 'Bob', 'Age': 30, 'Capacity': 30, 'Score': 60}, {'ID': 3, 'Name': 'Charlie', 'Age': 35, 'Capacity': 70, 'Score': 140}, {'ID': 4, 'Name': 'David', 'Age': 40, 'Capacity': 20, 'Score': 40}, {'ID': 5, 'Name': 'Eve', 'Age': 45, 'Capacity': 40, 'Score': 80}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Add a new column \"Score\" with some computed or static value\n",
-    "new_rdd = rdd.map(lambda row: {**row, \"Score\": row[\"Capacity\"] * 2})\n",
-    "\n",
-    "# Show the updated RDD\n",
-    "print(new_rdd.collect())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "4e36c296",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'ID': 1, 'Name': 'Alice', 'Age': 25, 'Capacity': 50, 'Label': 1}\n",
-      "{'ID': 2, 'Name': 'Bob', 'Age': 30, 'Capacity': 30, 'Label': 0}\n",
-      "{'ID': 3, 'Name': 'Charlie', 'Age': 35, 'Capacity': 70, 'Label': 1}\n",
-      "{'ID': 4, 'Name': 'David', 'Age': 40, 'Capacity': 20, 'Label': 0}\n",
-      "{'ID': 5, 'Name': 'Eve', 'Age': 45, 'Capacity': 40, 'Label': 0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "labeled_rdd = rdd.map(lambda row: {**row, \"Label\": 1 if row[\"Capacity\"] > 40 else 0})\n",
-    "\n",
-    "for row in labeled_rdd.collect():\n",
-    "    print(row)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "bc8a0e00",
    "metadata": {},
@@ -145,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "0715b0a6",
    "metadata": {},
    "outputs": [],
@@ -166,51 +83,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 101,
    "id": "cae169e3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "2"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd = rdd.repartition(1)\n",
+    "rdd = rdd.repartition(2)\n",
     "rdd.getNumPartitions()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "1967f06b",
+   "cell_type": "markdown",
+   "id": "a9bde2d9",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2.5, 3.6, 4.7, 5.8, 6.9]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "lst = rdd.sample(False, 0.5).collect()\n",
-    "lst[0]['time_series']"
+    "# adding exemplar column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 102,
    "id": "dc7f8c3e",
    "metadata": {},
    "outputs": [
@@ -218,14 +121,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9]}\n",
-      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9]}\n",
-      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9]}\n",
-      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9]}\n",
-      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9]}\n",
-      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9]}\n",
-      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9]}\n",
-      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9]}\n"
+      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
+      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
+      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
+      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
+      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
+      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9]}\n",
+      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9]}\n",
+      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9]}\n"
      ]
     }
    ],
@@ -243,8 +146,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "66d7f27e",
+   "metadata": {},
+   "source": [
+    "# calculating DTW distance using time series and exemplar columns"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 103,
    "id": "1bd9ff98",
    "metadata": {},
    "outputs": [
@@ -252,14 +163,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9], 'dtw_distance': 4.085339643163099}\n",
-      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9], 'dtw_distance': 1.42828568570857}\n",
-      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9], 'dtw_distance': 1.118033988749895}\n",
-      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9], 'dtw_distance': 2.2671568097509267}\n",
-      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9], 'dtw_distance': 0.0}\n",
-      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9], 'dtw_distance': 3.1208973068654466}\n",
-      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9], 'dtw_distance': 1.118033988749895}\n",
-      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplar': [1.5, 2.6, 3.7, 4.8, 5.9], 'dtw_distance': 5.165268628057984}\n"
+      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 1.118033988749895}\n",
+      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 1.118033988749895}\n",
+      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 3.1208973068654466}\n",
+      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 1.42828568570857}\n",
+      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 0.0}\n",
+      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9], 'dtw_distance': 6.283311228962003}\n",
+      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9], 'dtw_distance': 4.085339643163099}\n",
+      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9], 'dtw_distance': 0.0}\n"
      ]
     }
    ],
@@ -276,29 +187,171 @@
     "    updated_rows = []\n",
     "    \n",
     "    for row in partition_data:\n",
-    "        # Access the time_series and exemplar fields for each row\n",
     "        time_series = row['time_series']\n",
     "        exemplar = row['exemplar']\n",
     "        \n",
-    "        # Calculate the DTW distance\n",
     "        dtw_distance = dtw.distance(time_series, exemplar)\n",
     "        \n",
-    "        # Add the DTW distance as a new column\n",
     "        updated_row = {**row, \"dtw_distance\": dtw_distance}\n",
+    "        updated_rows.append(updated_row)\n",
+    "    return iter(updated_rows)\n",
+    "\n",
+    "rdd_with_dtw = rdd_with_sampled_column.mapPartitions(calc_dtw_distance)\n",
+    "for row in rdd_with_dtw.collect():\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d59dd988",
+   "metadata": {},
+   "source": [
+    "# WORKS FOR ANY NUM OF PARTITIONS AND EXEMPLARS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "05bf335a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]]}\n",
+      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]]}\n",
+      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]]}\n",
+      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]]}\n",
+      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]]}\n",
+      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [2.0, 3.1, 4.2, 5.3, 6.4]]}\n",
+      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [2.0, 3.1, 4.2, 5.3, 6.4]]}\n",
+      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [2.0, 3.1, 4.2, 5.3, 6.4]]}\n",
+      "\n",
+      "rdd num partitions: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_sample_and_add_column_function(num_exemplars):\n",
+    "    def sample_and_add_column(iterator):\n",
+    "        partition_data = list(iterator)\n",
+    "        exemplars = []\n",
+    "        for row in sample(partition_data, min(num_exemplars, len(partition_data))):\n",
+    "            exemplars.append(row['time_series'])\n",
+    "        return iter([{**row, \"exemplars\": exemplars} for row in partition_data])\n",
+    "    return sample_and_add_column\n",
+    "\n",
+    "# Example usage\n",
+    "num_exemplars = 2\n",
+    "sample_and_add_column = create_sample_and_add_column_function(num_exemplars)\n",
+    "rdd_with_exemplar_column = rdd.mapPartitions(sample_and_add_column)\n",
+    "for row in rdd_with_exemplar_column.collect():\n",
+    "    print(row)\n",
+    "\n",
+    "print(f'\\nrdd num partitions: {rdd_with_exemplar_column.getNumPartitions()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "b7bed113",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 1.118033988749895, 'dtw_distance_exemplar_2': 1.1180339887498947}\n",
+      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 1.118033988749895, 'dtw_distance_exemplar_2': 2.2671568097509267}\n",
+      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 3.1208973068654466, 'dtw_distance_exemplar_2': 1.42828568570857}\n",
+      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 1.42828568570857, 'dtw_distance_exemplar_2': 0.0}\n",
+      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 0.0, 'dtw_distance_exemplar_2': 1.42828568570857}\n",
+      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [2.0, 3.1, 4.2, 5.3, 6.4]], 'dtw_distance_exemplar_1': 6.283311228962003, 'dtw_distance_exemplar_2': 1.42828568570857}\n",
+      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [2.0, 3.1, 4.2, 5.3, 6.4]], 'dtw_distance_exemplar_1': 4.085339643163099, 'dtw_distance_exemplar_2': 0.0}\n",
+      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [2.0, 3.1, 4.2, 5.3, 6.4]], 'dtw_distance_exemplar_1': 0.0, 'dtw_distance_exemplar_2': 4.085339643163099}\n",
+      "\n",
+      "rdd num partitions: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calc_dtw_distance(iterator):\n",
+    "    partition_data = list(iterator)\n",
+    "    updated_rows = []\n",
+    "    \n",
+    "    for row in partition_data:\n",
+    "        time_series = row['time_series']\n",
+    "        exemplars = row['exemplars']\n",
+    "        \n",
+    "        # Calculate DTW distances for each exemplar\n",
+    "        dtw_distances = [dtw.distance(time_series, exemplar) for exemplar in exemplars]\n",
+    "        \n",
+    "        # Add each DTW distance as a separate column\n",
+    "        updated_row = {**row}\n",
+    "        for i, dtw_distance in enumerate(dtw_distances):\n",
+    "            updated_row[f\"dtw_distance_exemplar_{i+1}\"] = dtw_distance\n",
+    "        \n",
     "        updated_rows.append(updated_row)\n",
     "    \n",
     "    return iter(updated_rows)\n",
     "\n",
-    "rdd_with_dtw = rdd_with_sampled_column.mapPartitions(calc_dtw_distance)\n",
-    "\n",
+    "# Example usage\n",
+    "rdd_with_dtw = rdd_with_exemplar_column.mapPartitions(calc_dtw_distance)\n",
     "for row in rdd_with_dtw.collect():\n",
+    "    print(row)\n",
+    "\n",
+    "print(f'\\nrdd num partitions: {rdd_with_dtw.getNumPartitions()}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "667bd906",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 1.118033988749895, 'dtw_distance_exemplar_2': 1.1180339887498947, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
+      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 1.118033988749895, 'dtw_distance_exemplar_2': 2.2671568097509267, 'closest exemplar': 'dtw_distance_exemplar_1'}\n",
+      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 3.1208973068654466, 'dtw_distance_exemplar_2': 1.42828568570857, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
+      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 1.42828568570857, 'dtw_distance_exemplar_2': 0.0, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
+      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [2.5, 3.6, 4.7, 5.8, 6.9]], 'dtw_distance_exemplar_1': 0.0, 'dtw_distance_exemplar_2': 1.42828568570857, 'closest exemplar': 'dtw_distance_exemplar_1'}\n",
+      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [2.0, 3.1, 4.2, 5.3, 6.4]], 'dtw_distance_exemplar_1': 6.283311228962003, 'dtw_distance_exemplar_2': 1.42828568570857, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
+      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [2.0, 3.1, 4.2, 5.3, 6.4]], 'dtw_distance_exemplar_1': 4.085339643163099, 'dtw_distance_exemplar_2': 0.0, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
+      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [2.0, 3.1, 4.2, 5.3, 6.4]], 'dtw_distance_exemplar_1': 0.0, 'dtw_distance_exemplar_2': 4.085339643163099, 'closest exemplar': 'dtw_distance_exemplar_1'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def classify_instance(iterator):\n",
+    "    partition_data = list(iterator)\n",
+    "\n",
+    "    for row in partition_data:\n",
+    "        # Check if there are DTW distances for exemplars\n",
+    "        exemplar_distances = {key: value for key, value in row.items() if key.startswith(\"dtw_distance_exemplar_\")}\n",
+    "        \n",
+    "        if exemplar_distances:\n",
+    "            # Find the exemplar with the smallest DTW distance\n",
+    "            closest_exemplar = min(exemplar_distances, key=exemplar_distances.get)\n",
+    "            \n",
+    "            # Assign the closest exemplar to the row\n",
+    "            row[\"closest exemplar\"] = closest_exemplar\n",
+    "\n",
+    "    return iter(partition_data)\n",
+    "\n",
+    "# Example usage\n",
+    "rdd_with_classification = rdd_with_dtw.mapPartitions(classify_instance)\n",
+    "for row in rdd_with_classification.collect():\n",
     "    print(row)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89e885f3",
+   "id": "95216105",
    "metadata": {},
    "outputs": [],
    "source": []
