--- a/code/src/rdd_global_trialling_stuff.ipynb
+++ b/code/src/rdd_global_trialling_stuff.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9063d00c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'bigdata_env (Python 3.11.12)' requires the ipykernel package.\n",
+      "\u001b[1;31m<a href='command:jupyter.createPythonEnvAndSelectController'>Create a Python Environment</a> with the required packages.\n",
+      "\u001b[1;31mOr install 'ipykernel' using the command: 'conda install -n bigdata_env ipykernel --update-deps --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import pandas as pd\n",
@@ -39,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "84413ae3",
    "metadata": {},
    "outputs": [],
@@ -62,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0715b0a6",
    "metadata": {},
    "outputs": [],
@@ -83,21 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cae169e3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "rdd = rdd.repartition(2)\n",
     "rdd.getNumPartitions()"
@@ -105,25 +105,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "414dc4de",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Partition 0: {'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4]}\n",
-      "Partition 0: {'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4]}\n",
-      "Partition 0: {'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9]}\n",
-      "Partition 0: {'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9]}\n",
-      "Partition 0: {'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
-      "Partition 1: {'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4]}\n",
-      "Partition 1: {'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4]}\n",
-      "Partition 1: {'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def print_partition_rows(index, iterator):\n",
     "    # Add partition index to each row\n",
@@ -147,25 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "dc7f8c3e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
-      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
-      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
-      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
-      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9]}\n",
-      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9]}\n",
-      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9]}\n",
-      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def sample_and_add_column(iterator):\n",
     "    partition_data = list(iterator)\n",
@@ -189,25 +159,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "1bd9ff98",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 1.118033988749895}\n",
-      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 1.118033988749895}\n",
-      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 3.1208973068654466}\n",
-      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 1.42828568570857}\n",
-      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplar': [3.5, 4.6, 5.7, 6.8, 7.9], 'dtw_distance': 0.0}\n",
-      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9], 'dtw_distance': 6.283311228962003}\n",
-      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9], 'dtw_distance': 4.085339643163099}\n",
-      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplar': [4.5, 5.6, 6.7, 7.8, 8.9], 'dtw_distance': 0.0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# def calc_dtw_distance(iterator):\n",
     "#     partition_data = list(iterator)\n",
@@ -253,27 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "05bf335a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]]}\n",
-      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]]}\n",
-      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]]}\n",
-      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]]}\n",
-      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]]}\n",
-      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [1.0, 2.1, 3.2, 4.3, 5.4]]}\n",
-      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [1.0, 2.1, 3.2, 4.3, 5.4]]}\n",
-      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [1.0, 2.1, 3.2, 4.3, 5.4]]}\n",
-      "\n",
-      "rdd num partitions: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def create_sample_and_add_column_function(num_exemplars):\n",
     "    def sample_and_add_column(iterator):\n",
@@ -298,27 +236,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b7bed113",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 1.118033988749895, 'dtw_distance_exemplar_2': 0.0}\n",
-      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 1.118033988749895, 'dtw_distance_exemplar_2': 1.42828568570857}\n",
-      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 3.1208973068654466, 'dtw_distance_exemplar_2': 2.2671568097509267}\n",
-      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 1.42828568570857, 'dtw_distance_exemplar_2': 1.1180339887498947}\n",
-      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 0.0, 'dtw_distance_exemplar_2': 1.118033988749895}\n",
-      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [1.0, 2.1, 3.2, 4.3, 5.4]], 'dtw_distance_exemplar_1': 6.283311228962003, 'dtw_distance_exemplar_2': 0.0}\n",
-      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [1.0, 2.1, 3.2, 4.3, 5.4]], 'dtw_distance_exemplar_1': 4.085339643163099, 'dtw_distance_exemplar_2': 1.42828568570857}\n",
-      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [1.0, 2.1, 3.2, 4.3, 5.4]], 'dtw_distance_exemplar_1': 0.0, 'dtw_distance_exemplar_2': 6.283311228962003}\n",
-      "\n",
-      "rdd num partitions: 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def calc_dtw_distance(iterator):\n",
     "    partition_data = list(iterator)\n",
@@ -350,25 +271,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "667bd906",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'label': 3, 'time_series': [3.0, 4.1, 5.2, 6.3, 7.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 1.118033988749895, 'dtw_distance_exemplar_2': 0.0, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
-      "{'label': 4, 'time_series': [4.0, 5.1, 6.2, 7.3, 8.4], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 1.118033988749895, 'dtw_distance_exemplar_2': 1.42828568570857, 'closest exemplar': 'dtw_distance_exemplar_1'}\n",
-      "{'label': 1, 'time_series': [1.5, 2.6, 3.7, 4.8, 5.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 3.1208973068654466, 'dtw_distance_exemplar_2': 2.2671568097509267, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
-      "{'label': 2, 'time_series': [2.5, 3.6, 4.7, 5.8, 6.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 1.42828568570857, 'dtw_distance_exemplar_2': 1.1180339887498947, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
-      "{'label': 3, 'time_series': [3.5, 4.6, 5.7, 6.8, 7.9], 'exemplars': [[3.5, 4.6, 5.7, 6.8, 7.9], [3.0, 4.1, 5.2, 6.3, 7.4]], 'dtw_distance_exemplar_1': 0.0, 'dtw_distance_exemplar_2': 1.118033988749895, 'closest exemplar': 'dtw_distance_exemplar_1'}\n",
-      "{'label': 1, 'time_series': [1.0, 2.1, 3.2, 4.3, 5.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [1.0, 2.1, 3.2, 4.3, 5.4]], 'dtw_distance_exemplar_1': 6.283311228962003, 'dtw_distance_exemplar_2': 0.0, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
-      "{'label': 2, 'time_series': [2.0, 3.1, 4.2, 5.3, 6.4], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [1.0, 2.1, 3.2, 4.3, 5.4]], 'dtw_distance_exemplar_1': 4.085339643163099, 'dtw_distance_exemplar_2': 1.42828568570857, 'closest exemplar': 'dtw_distance_exemplar_2'}\n",
-      "{'label': 4, 'time_series': [4.5, 5.6, 6.7, 7.8, 8.9], 'exemplars': [[4.5, 5.6, 6.7, 7.8, 8.9], [1.0, 2.1, 3.2, 4.3, 5.4]], 'dtw_distance_exemplar_1': 0.0, 'dtw_distance_exemplar_2': 6.283311228962003, 'closest exemplar': 'dtw_distance_exemplar_1'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# not sure if this is needed\n",
     "\n",
@@ -396,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a1539859",
    "metadata": {},
    "outputs": [],
@@ -420,19 +326,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "34b0d24e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gini impurity of partition 1: 0.72\n",
-      "gini impurity of partition 2: 0.6666666666666667\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example usage\n",
     "gini_rdd = rdd_with_classification.mapPartitions(calculate_partition_gini)\n",
@@ -454,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "56633663",
    "metadata": {},
    "outputs": [],
@@ -487,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2062c65a",
    "metadata": {},
    "outputs": [],
@@ -501,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "f56951b8",
    "metadata": {},
    "outputs": [],
@@ -554,21 +451,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "864a41e9",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'exemplar': 'dtw_distance_exemplar_1', 'yes_gini': 0.5, 'no_gini': 0.6666666666666667, 'yes_split_size': 2, 'no_split_size': 3}\n",
-      "{'exemplar': 'dtw_distance_exemplar_2', 'yes_gini': 0.6666666666666667, 'no_gini': 0.5, 'yes_split_size': 3, 'no_split_size': 2}\n",
-      "{'exemplar': 'dtw_distance_exemplar_1', 'yes_gini': 0.0, 'no_gini': 0.5, 'yes_split_size': 1, 'no_split_size': 2}\n",
-      "{'exemplar': 'dtw_distance_exemplar_2', 'yes_gini': 0.5, 'no_gini': 0.0, 'yes_split_size': 2, 'no_split_size': 1}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# example usage\n",
     "ts_rdd_split_results = rdd_with_classification.mapPartitions(evaluate_splits_within_partition)\n",
@@ -579,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "59e67b9d",
    "metadata": {},
    "outputs": [],
@@ -602,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "4e50d306",
    "metadata": {},
    "outputs": [],
@@ -633,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "317f59db",
    "metadata": {},
    "outputs": [],
@@ -835,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "fa99d5df",
    "metadata": {},
    "outputs": [],
@@ -1039,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "710807b6",
    "metadata": {},
    "outputs": [],
@@ -1072,46 +958,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "9aa8a878",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-----+-------------------------+\n",
-      "|label|time_series              |\n",
-      "+-----+-------------------------+\n",
-      "|1    |[1.2, 2.4, 3.6, 4.8, 6.0]|\n",
-      "|1    |[1.0, 1.8, 2.6, 3.4, 4.2]|\n",
-      "|1    |[0.9, 1.8, 2.7, 3.6, 4.5]|\n",
-      "|1    |[1.5, 2.1, 2.7, 3.3, 3.9]|\n",
-      "|1    |[0.8, 1.7, 2.5, 3.2, 4.0]|\n",
-      "+-----+-------------------------+\n",
-      "only showing top 5 rows\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.show(5, truncate=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "ea7a4e9d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "best time series to split on is [1.1, 2.1, 3.1, 4.1, 5.1] with a gini reduction of 0.2533333333333333\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "global_model = GlobalModelManager()\n",
     "global_model.train(df)\n"
@@ -1142,7 +1002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.11.12"
   }
  },
  "nbformat": 4,
