dont think this gobal model is very global

--- a/code/src/RDD_BA_2.ipynb
+++ b/code/src/RDD_BA_2.ipynb
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 118,
    "id": "87b9275b",
    "metadata": {},
    "outputs": [
@@ -1012,37 +1012,35 @@
      "text": [
       "\n",
       "Decision Tree for Partition 0:\n",
-      "Is closest to exemplar dtw_distance_exemplar_2 (class 4)?\n",
-      "Data: [6.0, 7.0, 8.0, 9.0, 10.0], Gini reduction: 0.2526\n",
-      "Yes ->\n",
-      "  Leaf: Predict class 4\n",
-      "No ->\n",
-      "  Is closest to exemplar dtw_distance_exemplar_3 (class 1)?\n",
-      "  Data: [1.4, 2.0, 2.6, 3.2, 3.8], Gini reduction: 0.1671\n",
-      "  Yes ->\n",
-      "    Leaf: Predict class 3\n",
-      "  No ->\n",
-      "    Leaf: Predict class 2\n",
-      "\n",
-      "Decision Tree for Partition 1:\n",
-      "Is closest to exemplar dtw_distance_exemplar_3 (class 4)?\n",
-      "Data: [0.9, 1.7, 1.2, 2.4, 2.8], Gini reduction: 0.2533\n",
+      "Is closest to exemplar dtw_distance_exemplar_3 (class 3)?\n",
+      "Data: [1.2, 2.0, 2.8, 3.6, 4.4], Gini reduction: 0.1920\n",
       "Yes ->\n",
       "  Leaf: Predict class 1\n",
       "No ->\n",
-      "  Is closest to exemplar dtw_distance_exemplar_1 (class 1)?\n",
-      "  Data: [1.2, 2.4, 3.6, 4.8, 6.0], Gini reduction: 0.2111\n",
-      "  Yes ->\n",
-      "    Leaf: Predict class 1\n",
-      "  No ->\n",
-      "    Is closest to exemplar dtw_distance_exemplar_4 (class 3)?\n",
-      "    Data: [0.3, 1.7, 1.6, 2.2, 2.6], Gini reduction: 0.0133\n",
-      "    Yes ->\n",
-      "      Leaf: Predict class 2\n",
-      "    No ->\n",
-      "      Leaf: Predict class 2\n",
+      "  Leaf: Predict class 4\n",
       "\n",
-      "Ensemble Accuracy: 0.5000 (13/26)\n"
+      "Decision Tree for Partition 1:\n",
+      "Leaf: Predict class 2\n",
+      "\n",
+      "Decision Tree for Partition 2:\n",
+      "Is closest to exemplar dtw_distance_exemplar_2 (class 4)?\n",
+      "Data: [6.0, 7.0, 8.0, 9.0, 10.0], Gini reduction: 0.1503\n",
+      "Yes ->\n",
+      "  Leaf: Predict class 4\n",
+      "No ->\n",
+      "  Is closest to exemplar dtw_distance_exemplar_3 (class 2)?\n",
+      "  Data: [2.2, 3.1, 4.0, 4.9, 5.8], Gini reduction: 0.1579\n",
+      "  Yes ->\n",
+      "    Leaf: Predict class 2\n",
+      "  No ->\n",
+      "    Is closest to exemplar dtw_distance_exemplar_1 (class 3)?\n",
+      "    Data: [0.5, 1.5, 2.5, 3.5, 4.5], Gini reduction: 0.0772\n",
+      "    Yes ->\n",
+      "      Leaf: Predict class 1\n",
+      "    No ->\n",
+      "      Leaf: Predict class 3\n",
+      "\n",
+      "Ensemble Accuracy: 0.3333 (8/24)\n"
      ]
     }
    ],
@@ -1409,13 +1407,13 @@
     "    df = spark.createDataFrame(tsdata)\n",
     "    \n",
     "    # Repartition data\n",
-    "    rdd = repartition_sparkdf(df, 2)\n",
+    "    num_partitions = 3\n",
+    "    rdd = repartition_sparkdf(df, num_partitions)\n",
     "    \n",
     "    # Choose exemplars\n",
     "    rdd_with_exemplars = rdd.mapPartitions(choose_exemplars)\n",
     "    \n",
     "    # Calculate DTW distances\n",
-    "    \n",
     "    rdd_with_dtw = rdd_with_exemplars.mapPartitions(calc_dtw_distance)\n",
     "    \n",
     "    # Assign closest exemplars\n",
